# master_code

./: README.md
GGM_xsecs/: mergeOutput.py  mergeOutput_M1M3.py  plot_MassPlane.py
LHAPDF/LHAPDF-6.2.1/: Makefile  config.status  libtool
LHAPDF_old/LHAPDF-6.1.6/: Makefile  config.status  lhapdf  libtool
LoopTools/: FeynInstall.sh  LoopTools  install.log-LoopTools
LoopTools/LoopTools-2.13/: makefile
finalPlot_Christian/PlotFromDatacard/: Main  Makefile  Plot.cc  Plot.h  README.md  gfx.cc  gfx.h  hist.cc  hist.h
framework_johannes/: CMakeLists.txt  GGM_M1_M2_scan.txt  GGM_M1_M3_scan.txt  GGM_WinoBino_scan.txt  README.md  T5Wg_scan.txt  T5gg_scan.txt  T6Wg_scan.txt  T6gg_scan.txt  TChiNg_scan.txt  TChiWg_scan.txt  TODO.md  config.ini  shape_study.cc  trigger_13TeV.cc  view.py  xsec_GGM_M1_M2.txt  xsec_GGM_M1_M2_old.txt  xsec_GGM_M1_M3.txt  xsec_GGM_M1_M3_old.txt
framework_johannes/src/: CMakeLists.txt  Config.cpp  Config.hpp  Dataset.cpp  Dataset.hpp  danilo_plotSig.cpp  main.cpp  shape_effect.cc
framework_johannes/src/modules/: 80XXcheck.cpp  8TeVXcheck.cpp  CMakeLists.txt  JES_shift.cpp  JES_studies.cpp  SFapplication.cpp  SR_JES.cpp  SR_variance.cpp  SRbinning.cpp  acceptance.cpp  correlation_test.cpp  cutflow.cpp  danilo_GGM_scan.cpp  danilo_SFapplication.cpp  danilo_acceptanceHist.cpp  danilo_check_overlap.cpp  danilo_check_scan.cpp  danilo_cutflow_GGM.cpp  danilo_datacards.cpp  danilo_distributions.cpp  danilo_interpolateAcc.cpp  danilo_maxSensitivity.cpp  danilo_nDecays.cpp  danilo_plot1d_limit.cpp  danilo_plot2d_scan.cpp  danilo_plotGGMparameter.cpp  danilo_plotOverlap.cpp  danilo_plotSig.cpp  danilo_plot_GGM.cpp  danilo_plot_combined.cpp  danilo_plot_postfitBKG.cpp  danilo_rValuediff.cpp  danilo_signal_scan.cpp  danilo_signal_scan_newTrig.cpp  danilo_totsignalyield.cpp  distributions.cpp  efake.cpp  eventPicker.cpp  fit_JES.cpp  fit_weighting.cpp  (+18 more)
framework_johannes/src/py/: coVariance.py  datacards.py  limits.py  stat_err.py
framework_johannes/src/style/: CMS_lumi.C  CMS_lumi.h  CMakeLists.txt  cms_labels.cpp  cms_labels.hpp  myStyle.C  myStyle.hpp  tdrstyle.C
framework_johannes/src/tools/: CMakeLists.txt  efficiency.cpp  efficiency.hpp  gfx.cpp  gfx.hpp  hist.cpp  hist.hpp  io.cpp  io.hpp  io.tpp  physics.cpp  physics.hpp  util.cpp  util.hpp  weighters.hpp
framework_johannes/src/tree/: CMakeLists.txt  LinkDef.h  TreeParticles.cpp  TreeParticles.hpp  TreeParticles_old.hpp
hdecay/: br.input  hdecay.in  manual.ps  slha.in  slha.out
limits/: combine_logger.out  createLimits.py  diffContour.py  mergeLimits.py  mergeSignificance.py  physMass_limits.py  physMass_limits_M1M3.py  pyslha.py  runCombine.py  runCombine.sh  runLimits.py  tqdm.py
limits/BR_limits/: DatacardParser.py  MyDatacard.py  ScanBr.py  (+1 more)
susyhit/: README.md  process_slha.py  sdecay.f  slhaspectrum.in  susyhit_slha.out
tree_check/: Makefile  compare_ntuple  compare_ntuple.cpp
(+155 files in other folders)
